# Full-flask-website

./: .breakpoints  README.md  pyproject.toml
website/: __init__.py  auth.py  database.db  views.py
website/static/: index.js
website/templates/: base.html  home.html  login.html  sign_up.html
